# static-files-asgi

./: MANIFEST.in  pyproject.toml  requirements.txt
static_files/: _app.py
static_files/models/: base.py
static_files_asgi/: __init__.py  _app.py
static_files_asgi/enums/: __init__.py
static_files_asgi/models/: file.py  list.py
static_files_asgi/responses/: template.py
static_files_asgi/templates/: autoindex.html.jinja2
static_files_ex/: __init__.py  _app.py
static_files_ex/enums/: format.py
static_files_ex/models/: __init__.py  directory.py
static_files_ex/responses/: __init__.py  template.py
static_files_ex/responses/pydantic/: __init__.py  xml.py
static_files_ex/templates/: autoindex.html.jinja2
