[project]
name = "static-files-asgi"
version = "1.1.1"
dependencies = [
    "pydantic",
    "pydantic-xml",
    "jinja2",
    "anyio",
    "starlette",
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
  "ruff",
]

[tool.ruff]
cache-dir = ".cache/ruff"
src = ["static_files_asgi"]
line-length = 120

[tool.ruff.lint]
preview = true
explicit-preview-rules = true
select = ["ALL"]
ignore = [
    "D1",      # pydocstyle    undocumented-*
    "COM812",  # flake8-commas missing-trailing-comma
    "D203",    # pydocstyle    incorrect-blank-line-before-class
    "D212",    # pydocstyle    multi-line-summary-first-line
    "E501",    # pycodestyle   line-too-long
    "PLC0414", # Convention    useless-import-alias
]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.format]
skip-magic-trailing-comma = true
